--- a/index.less
+++ b/index.less
@@ -15,15 +15,11 @@
 @text_color: rgba(40, 40, 40, 1);
 @text_color-soft: rgba(80, 80, 80, .8);
 
-@main-layout_width: 1200px;
-@max-width-media: 1200px;
+@layout_width: 1200px;
 
-@animation_duration: 1s;
+@animation_duration: .4s;
+
 
 body {
-  font-family: 'Montserrat', sans-serif;
-  color: @text_color;
-  background-color: rgba(243, 242, 218, 1);
   margin: 0px;
-  padding: 0px;
 }
