--- a/index.css
+++ b/index.css
@@ -1,62 +1,54 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap&subset=cyrillic');
 .wrapper {
+  font-family: 'Montserrat', sans-serif;
+  color: #282828;
   min-height: 100vh;
   width: 100%;
   display: flex;
   flex-flow: column nowrap;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
-  background: center / cover no-repeat url(wrapper/background-0.png);
-}
-.wrapper > * {
-  width: 1200px;
-}
-.content__visibility-flag:checked ~ .wrapper {
-  animation: wrapper_change-background-and-position 0s step-start 1s forwards;
-}
-@keyframes wrapper_flashing {
-  0% {
-    filter: brightness(100%);
-  }
-  50% {
-    filter: brightness(200%);
-  }
-  100% {
-    filter: brightness(100%);
-  }
-}
-@keyframes wrapper_change-background-and-position {
-  from,
-  to {
-    background-image: url(wrapper/background-1.png);
-    justify-content: flex-start;
-  }
+  background: center / cover no-repeat url(wrapper/background-0.png) #f3f2da;
 }
 @media (max-width: 1200px) {
+  .content__visibility-flag:checked ~ .wrapper {
+    background-image: unset;
+  }
+}
+@media (min-width: 1200px) {
   .wrapper {
-    justify-content: flex-start;
+    justify-content: center;
   }
   .wrapper > * {
-    width: auto;
+    width: 1200px;
+  }
+  @keyframes wrapper_change-background-and-position {
+    from,
+    to {
+      background-image: url(wrapper/background-1.png);
+      justify-content: flex-start;
+    }
+  }
+  @keyframes wrapper_flashing {
+    0% {
+      opacity: 1;
+    }
+    70% {
+      opacity: .2;
+    }
+    100% {
+      opacity: 1;
+    }
   }
   .content__visibility-flag:checked ~ .wrapper {
-    background: unset;
+    animation: wrapper_flashing calc(0.6s) linear, wrapper_change-background-and-position 0s step-start 0.4s forwards;
   }
 }
 .welcome-text {
   text-align: center;
   font-weight: 400;
   font-size: 2.5rem;
-  height: 60px;
-  margin: 0px 0px 70px 0px;
-}
-.welcome-text {
-  grid-row-start: 1;
-  grid-column-start: 1;
-  grid-column-end: 4;
-}
-.content__visibility-flag:checked ~ * .welcome-text {
-  animation: welcome-text_hidding 0s step-start 1s forwards;
+  margin: 40px 0px 30px 0px;
 }
 @keyframes welcome-text_hidding {
   from,
@@ -66,37 +58,44 @@
     margin: 0px;
   }
 }
-@media (max-width: 1200px) {
+.content__visibility-flag:checked ~ * .welcome-text {
+  animation: welcome-text_hidding 0s step-start 0s forwards;
+}
+@media (min-width: 1200px) {
   .welcome-text {
-    margin: 40px 0px 30px 0px;
+    height: 60px;
+    margin: 0px 0px 70px 0px;
+    grid-row-start: 1;
+    grid-column-start: 1;
+    grid-column-end: 4;
+  }
+  .content__visibility-flag:checked ~ * .welcome-text {
+    animation-delay: 0.4s;
   }
 }
-.main-layout {
-  display: grid;
-  grid-template-rows: auto auto;
-  grid-auto-flow: column;
-  gap: 0px calc(79.5px);
-  height: 100%;
-}
-.main-layout__content {
-  grid-row-start: 3;
-  grid-column-start: 1;
-  grid-column-end: 4;
-}
-.content__visibility-flag:checked ~ * .main-layout {
-  animation: main-layout_translate 1s linear;
-}
-@keyframes main-layout_translate {
-  from {
-    transform: translateY(0vh);
-  }
-  to {
-    transform: translateY(-58vh);
-  }
-}
-@media (max-width: 1200px) {
+@media (min-width: 1200px) {
   .main-layout {
-    display: block;
+    display: grid;
+    grid-template-rows: auto auto;
+    grid-auto-flow: column;
+    gap: 0px calc(79.5px);
+    height: 100%;
+  }
+  .main-layout__content {
+    grid-row-start: 3;
+    grid-column-start: 1;
+    grid-column-end: 4;
+  }
+  @keyframes main-layout_translate {
+    from {
+      transform: translateY(0vh);
+    }
+    to {
+      transform: translateY(-45vh);
+    }
+  }
+  .content__visibility-flag:checked ~ * .main-layout {
+    animation: main-layout_translate 0.4s linear;
   }
 }
 .menu-item {
@@ -112,58 +111,6 @@
 }
 .menu-item[for="attract-section"] {
   background-image: url(menu-item/menu-item-image-3.png);
-}
-@media (min-width: 1200px) {
-  .menu-item {
-    width: 345px;
-    height: 345px;
-    border: solid 1px rgba(255, 255, 255, 0);
-    border-radius: 50%;
-    box-shadow: 0px 0px 0px 10px rgba(255, 255, 255, 0.7);
-    background-position: 50% 30%;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  .menu-item::before {
-    /* push down text of .menu-item */
-    content: '';
-    margin-bottom: 90px;
-  }
-  .menu-item:hover {
-    cursor: pointer;
-    border-color: #00a082;
-  }
-  @keyframes menu-item_change-button {
-    from,
-    to {
-      border-width: 0px 0px 4px 0px;
-      margin-bottom: -1px;
-      border-radius: unset;
-      box-shadow: unset;
-      height: 110px;
-      background: unset;
-      justify-content: center;
-    }
-  }
-  @keyframes menu-item_remove-space {
-    from,
-    to {
-      margin-bottom: 0px;
-    }
-  }
-  .content__visibility-flag:checked ~ * .menu-item {
-    animation: menu-item_change-button 0s step-start 1s forwards;
-  }
-  .content__visibility-flag:checked ~ * .menu-item::before {
-    animation: menu-item_remove-space 0s step-start 1s forwards;
-  }
-  .content__visibility-flag.trade-section:checked ~ * .menu-item[for="trade-section"],
-  .content__visibility-flag.invest-section:checked ~ * .menu-item[for="invest-section"],
-  .content__visibility-flag.attract-section:checked ~ * .menu-item[for="attract-section"] {
-    color: #00a082;
-    border-color: #00a082;
-  }
 }
 @media (max-width: 1200px) {
   .menu-item {
@@ -196,17 +143,60 @@
     transform: rotate(45deg);
   }
 }
-.content {
-  visibility: hidden;
-  height: 0px;
-  width: 60%;
+@media (min-width: 1200px) {
+  .menu-item {
+    width: 345px;
+    height: 345px;
+    border: solid 1px rgba(255, 255, 255, 0);
+    border-radius: 50%;
+    box-shadow: 0px 0px 0px 10px rgba(255, 255, 255, 0.7);
+    background-position: 50% 30%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .menu-item::before {
+    /* push down text of .menu-item */
+    content: '';
+    margin-bottom: 90px;
+  }
+  .menu-item:hover {
+    cursor: pointer;
+    border-color: #00a082;
+  }
+  @keyframes menu-item_change-button {
+    from,
+    to {
+      border-width: 0px 0px 3px 0px;
+      margin-bottom: -2px;
+      border-radius: unset;
+      box-shadow: unset;
+      height: 110px;
+      background: unset;
+      justify-content: center;
+    }
+  }
+  @keyframes menu-item_remove-space {
+    from,
+    to {
+      margin-bottom: 0px;
+    }
+  }
+  .content__visibility-flag:checked ~ * .menu-item {
+    animation: menu-item_change-button 0s step-start 0.4s forwards;
+  }
+  .content__visibility-flag:checked ~ * .menu-item::before {
+    animation: menu-item_remove-space 0s step-start 0.4s forwards;
+  }
+  .content__visibility-flag.trade-section:checked ~ * .menu-item[for="trade-section"],
+  .content__visibility-flag.invest-section:checked ~ * .menu-item[for="invest-section"],
+  .content__visibility-flag.attract-section:checked ~ * .menu-item[for="attract-section"] {
+    color: #00a082;
+    border-color: #00a082;
+  }
 }
-.content::before {
-  content: '';
-  display: block;
-  width: 1200px;
-  margin-bottom: 70px;
-  box-shadow: 0px 0px 0px 0.5px rgba(80, 80, 80, 0.8), 1200px 0px 0px 0.5px rgba(80, 80, 80, 0.8), calc(-1200px) 0px 0px 0.5px rgba(80, 80, 80, 0.8);
+.content {
+  display: none;
 }
 .content__visibility-flag {
   display: none;
@@ -214,23 +204,38 @@
 .content__visibility-flag.trade-section:checked ~ * .content.trade-section,
 .content__visibility-flag.invest-section:checked ~ * .content.invest-section,
 .content__visibility-flag.attract-section:checked ~ * .content.attract-section {
-  animation: content_show 0s step-start 1s forwards;
-}
-@keyframes content_show {
-  from,
-  to {
-    visibility: visible;
-    height: auto;
-  }
+  display: block;
 }
 @media (max-width: 1200px) {
-  .content {
-    width: auto;
-    padding: 10px 20px 60vw;
+  .content__visibility-flag.trade-section:checked ~ * .content.trade-section,
+  .content__visibility-flag.invest-section:checked ~ * .content.invest-section,
+  .content__visibility-flag.attract-section:checked ~ * .content.attract-section {
     background: bottom / 130vw no-repeat url(wrapper/background-1.png);
+    padding: 10px 20px 60vw;
+  }
+}
+@media (min-width: 1200px) {
+  .content {
+    width: 60%;
+    background: unset;
   }
   .content::before {
-    content: none;
+    content: '';
+    display: block;
+    width: 1200px;
+    margin-bottom: 70px;
+    box-shadow: 0px 0px 0px 0.5px rgba(80, 80, 80, 0.8), 1200px 0px 0px 0.5px rgba(80, 80, 80, 0.8), calc(-1200px) 0px 0px 0.5px rgba(80, 80, 80, 0.8);
+  }
+  @keyframes content_show {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+  .content__visibility-flag:checked ~ * .content {
+    animation: content_show 0.4s step-end 0s forwards;
   }
 }
 .open-account-button {
@@ -256,9 +261,5 @@
   color: #00a082;
 }
 body {
-  font-family: 'Montserrat', sans-serif;
-  color: #282828;
-  background-color: #f3f2da;
   margin: 0px;
-  padding: 0px;
 }
