--- a/wrapper/wrapper.less
+++ b/wrapper/wrapper.less
@@ -1,55 +1,55 @@
 // main: ../index.less
+// TODO: make flashing
 
 .wrapper {
+  font-family: 'Montserrat', sans-serif;
+  color: @text_color;
   min-height: 100vh;
   width: 100%;
   display: flex;
   flex-flow: column nowrap;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
-  background: center / cover no-repeat url(wrapper/background-0.png);
+  background: center / cover no-repeat url(wrapper/background-0.png) rgba(243, 242, 218, 1);
 }
 
-.wrapper > * {
-  width: @main-layout_width;
-}
-
-.content__visibility-flag:checked ~ .wrapper {
-  animation: wrapper_change-background-and-position 0s step-start @animation_duration forwards;
-}
-
-// TODO: make flashing
-
-@keyframes wrapper_flashing {
-  0% {
-    filter: brightness(100%);
-  }
-  50% {
-    filter: brightness(200%);
-  }
-  100% {
-    filter: brightness(100%);
+@media (max-width: @layout_width) {
+  .content__visibility-flag:checked ~ .wrapper {
+    background-image: unset;
   }
 }
 
-@keyframes wrapper_change-background-and-position {
-  from,
-  to {
-    background-image: url(wrapper/background-1.png);
-    justify-content: flex-start;
-  }
-}
-
-@media (max-width: @max-width-media) {
+@media (min-width: @layout_width) {
   .wrapper {
-    justify-content: flex-start;
+    justify-content: center;
   }
 
   .wrapper > * {
-    width: auto;
+    width: @layout_width;
+  }
+
+  @keyframes wrapper_change-background-and-position {
+    from,
+    to {
+      background-image: url(wrapper/background-1.png);
+      justify-content: flex-start;
+    }
+  }
+
+  @keyframes wrapper_flashing {
+    0% {
+      opacity: 1;
+    }
+    70% {
+      opacity: .2;
+    }
+    100% {
+      opacity: 1;
+    }
   }
 
   .content__visibility-flag:checked ~ .wrapper {
-    background: unset;
+    animation: wrapper_flashing calc(1.5 * @animation_duration) linear,
+               wrapper_change-background-and-position 0s step-start @animation_duration forwards;
   }
 }
