--- a/main-layout/main-layout.less
+++ b/main-layout/main-layout.less
@@ -1,14 +1,20 @@
 // main: ../index.less
 
-@main-layout-gap: calc((@layout_width - 3 * (@menu-item_diameter + 2px)) / 2);
+@media (e(@mobile)) {
+  .main-layout {
+    width: 100%;
+  }
+}
 
-@media (min-width: @layout_width) {
+
+@media (e(@desktop)) {
   .main-layout {
     display: grid;
     grid-template-rows: auto auto;
     grid-auto-flow: column;
     gap: 0px @main-layout-gap;
     height: 100%;
+    width: @layout_width;
   }
 
   .main-layout__content {
@@ -17,16 +23,17 @@
     grid-column-end: 4;
   }
 
-  @keyframes main-layout_translate {
-    from {
-      transform: translateY(0vh);
-    }
-    to {
-      transform: translateY(-45vh);
-    }
-  }
-
   .content__visibility-flag:checked ~ * .main-layout {
     animation: main-layout_translate @animation_duration linear;
+  }
+}
+
+
+@keyframes main-layout_translate {
+  from {
+    transform: translateY(0vh);
+  }
+  to {
+    transform: translateY(-45vh);
   }
 }
