--- a/welcome-text/welcome-text.less
+++ b/welcome-text/welcome-text.less
@@ -7,20 +7,12 @@
   margin: 40px 0px 30px 0px;
 }
 
-@keyframes welcome-text_hidding {
-  from,
-  to {
-    visibility: hidden;
-    height: 0px;
-    margin: 0px;
-  }
-}
-
 .content__visibility-flag:checked ~ * .welcome-text {
   animation: welcome-text_hidding 0s step-start 0s forwards;
 }
 
-@media (min-width: @layout_width) {
+
+@media (e(@desktop)) {
   .welcome-text {
     height: 60px;
     margin: 0px 0px 70px 0px;
@@ -31,5 +23,15 @@
 
   .content__visibility-flag:checked ~ * .welcome-text {
     animation-delay: @animation_duration;
+  }
+}
+
+
+@keyframes welcome-text_hidding {
+  from,
+  to {
+    visibility: hidden;
+    height: 0px;
+    margin: 0px;
   }
 }
